--- a/src/Reflectinator/Reflectinator.csproj
+++ b/src/Reflectinator/Reflectinator.csproj
@@ -39,6 +39,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CachedConstructorInfo.cs" />
+    <Compile Include="CachedConstructorInfo`1.cs" />
+    <Compile Include="CachedConstructorInfo`2.cs" />
+    <Compile Include="CachedConstructorInfo`3.cs" />
+    <Compile Include="CachedFieldInfo`2.cs" />
+    <Compile Include="CachedPropertyInfo.cs" />
+    <Compile Include="CachedPropertyInfo`2.cs" />
+    <Compile Include="CachedType.cs" />
+    <Compile Include="CachedType`1.cs" />
+    <Compile Include="FuncFactory.cs" />
+    <Compile Include="ICachedConstructorInfo.cs" />
+    <Compile Include="ICachedFieldInfo.cs" />
+    <Compile Include="ICachedPropertyInfo.cs" />
+    <Compile Include="ICachedType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
