--- a/src/Reflectinator.Tests/Reflectinator.Tests.csproj
+++ b/src/Reflectinator.Tests/Reflectinator.Tests.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CachedFieldInfoTests.cs" />
+    <Compile Include="CachedPropertyInfoTests.cs" />
     <Compile Include="CachedTypeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
