--- a/src/Reflectinator/Reflectinator.csproj
+++ b/src/Reflectinator/Reflectinator.csproj
@@ -48,6 +48,7 @@
     <Compile Include="CachedPropertyInfo`2.cs" />
     <Compile Include="CachedType.cs" />
     <Compile Include="CachedType`1.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="FuncFactory.cs" />
     <Compile Include="ICachedConstructorInfo.cs" />
     <Compile Include="ICachedFieldInfo.cs" />
