--- a/src/Reflectinator.Tests/Reflectinator.Tests.csproj
+++ b/src/Reflectinator.Tests/Reflectinator.Tests.csproj
@@ -46,7 +46,7 @@
     <Compile Include="ConstructorTests.cs" />
     <Compile Include="FieldTests.cs" />
     <Compile Include="PropertyTests.cs" />
-    <Compile Include="TypeInfoTests.cs" />
+    <Compile Include="TypeCrawlerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
