--- a/src/Reflectinator.Benchmarks/Reflectinator.Benchmarks.csproj
+++ b/src/Reflectinator.Benchmarks/Reflectinator.Benchmarks.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7C6B55B7-26C4-4496-99B7-D70D3DA715A1}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{0AE83693-B573-4722-B95D-043BCABD0B6F}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Reflectinator.Tests</RootNamespace>
-    <AssemblyName>Reflectinator.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <RootNamespace>Reflectinator.Benchmarks</RootNamespace>
+    <AssemblyName>benchmark</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -20,20 +21,22 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+    <Reference Include="ManyConsole">
+      <HintPath>..\packages\ManyConsole.0.4.2.17\lib\ManyConsole.dll</HintPath>
+    </Reference>
+    <Reference Include="NDesk.Options">
+      <HintPath>..\packages\NDesk.Options.0.2.1\lib\NDesk.Options.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,13 +47,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConstructorTests.cs" />
-    <Compile Include="FieldTests.cs" />
-    <Compile Include="PropertyTests.cs" />
-    <Compile Include="TypeCrawlerTests.cs" />
+    <Compile Include="BenchmarkCommand.cs" />
+    <Compile Include="GetReferenceTypeInstanceFieldValueBenchmark.cs" />
+    <Compile Include="GetReferenceTypeInstancePropertyValueBenchmark.cs" />
+    <Compile Include="GetReferenceTypeStaticFieldValueBenchmark.cs" />
+    <Compile Include="GetReferenceTypeStaticPropertyValueBenchmark.cs" />
+    <Compile Include="GetValueTypeInstanceFieldValueBenchmark.cs" />
+    <Compile Include="GetValueTypeInstancePropertyValueBenchmark.cs" />
+    <Compile Include="GetValueTypeStaticFieldValueBenchmark.cs" />
+    <Compile Include="GetValueTypeStaticPropertyValueBenchmark.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RunAllConsoleCommand.cs" />
+    <Compile Include="SetReferenceTypeInstanceFieldValueBenchmark.cs" />
+    <Compile Include="SetReferenceTypeInstancePropertyValueBenchmark.cs" />
+    <Compile Include="SetReferenceTypeStaticFieldValueBenchmark.cs" />
+    <Compile Include="SetReferenceTypeStaticPropertyValueBenchmark.cs" />
+    <Compile Include="SetValueTypeInstanceFieldValueBenchmark.cs" />
+    <Compile Include="SetValueTypeInstancePropertyValueBenchmark.cs" />
+    <Compile Include="SetValueTypeStaticFieldValueBenchmark.cs" />
+    <Compile Include="SetValueTypeStaticPropertyValueBenchmark.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
