Extract class & interface for static fields and properties.

--- a/src/Reflectinator/Reflectinator.csproj
+++ b/src/Reflectinator/Reflectinator.csproj
@@ -57,8 +57,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>FuncFactory.tt</DependentUpon>
     </Compile>
+    <Compile Include="IStaticField.cs" />
+    <Compile Include="IStaticProperty.cs" />
     <Compile Include="Property.cs" />
     <Compile Include="Property`2.cs" />
+    <Compile Include="StaticField`2.cs" />
+    <Compile Include="StaticProperty`2.cs" />
     <Compile Include="TypeCrawler.cs" />
     <Compile Include="TypeCrawler`1.cs" />
     <Compile Include="Extensions.cs" />
