Accessor funcs of (read|write)-only properties throw when invoked.

--- a/src/Reflectinator.Tests/Reflectinator.Tests.csproj
+++ b/src/Reflectinator.Tests/Reflectinator.Tests.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConstructorTests.cs" />
+    <Compile Include="ExpressionFactoryTests.cs" />
     <Compile Include="FieldTests.cs" />
     <Compile Include="MethodTests.cs" />
     <Compile Include="PropertyTests.cs" />
